Task controllers and integration tests for controllers